# matchy

./: .gitattributes  .gitignore  BRANCH_OPTIMIZATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  HASH_DOMAIN_OPTIMIZATION.md  LICENSE  MEMORY_LAYOUT_ANALYSIS.md  Makefile  PROFILING_GUIDE.md  PROFILING_LINUX.md  README.md  WARP.md  build.rs  rust_out  update-psl.sh
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  wasm.yml
benches/: extractor_bench.rs  matchy_bench.rs  reload_overhead_bench.rs
book/: book.toml  run-cmdrun.sh  run-project-version.sh
book/mdbook-project-version/: Cargo.toml
book/mdbook-project-version/src/: main.rs
book/src/: SUMMARY.md  changelog.md  quick-start.md
book/src/appendix/: examples.md
book/src/architecture/: binary-format.md
book/src/commands/: matchy-build.md  matchy-match.md  matchy-validate.md
book/src/dev/: building.md  releasing.md
book/src/getting-started/: api-c-first.md  api-installation.md  cli-installation.md  installation.md
book/src/guide/: auto-reload.md  extraction.md  performance.md  querying.md
book/src/reference/: binary-format.md  c-api.md  database-builder.md  database-query.md  error-handling-ref.md  mmdb-integration-design.md  schemas.md
crates/matchy/: Cargo.toml
crates/matchy-ac/: Cargo.toml
crates/matchy-ac/src/: lib.rs  validation.rs
crates/matchy-data-format/: Cargo.toml
crates/matchy-data-format/src/: lib.rs  validation.rs
crates/matchy-extractor/: Cargo.toml
crates/matchy-extractor/benches/: extraction_bench.rs
crates/matchy-extractor/src/: error.rs  lib.rs
crates/matchy-extractor/tools/update-psl/: Cargo.toml  README.md
crates/matchy-extractor/tools/update-psl/src/: main.rs
crates/matchy-format/: Cargo.toml  README.md
crates/matchy-format/src/: error.rs  lib.rs  mmap.rs  mmdb_builder.rs  offset_format.rs  validation.rs
crates/matchy-format/src/mmdb/: format.rs
crates/matchy-glob/: Cargo.toml  README.md
crates/matchy-glob/src/: lib.rs
crates/matchy-ip-trie/: Cargo.toml
crates/matchy-ip-trie/src/: lib.rs  validation.rs
crates/matchy-literal-hash/: Cargo.toml  README.md
crates/matchy-literal-hash/src/: lib.rs  validation.rs
crates/matchy-match-mode/: Cargo.toml  README.md
crates/matchy-match-mode/src/: lib.rs
crates/matchy-paraglob/: Cargo.toml
crates/matchy-paraglob/benches/: paraglob_bench.rs
crates/matchy-paraglob/src/: error.rs  glob.rs  lib.rs  offset_format.rs  paraglob_offset.rs  simd_utils.rs  validation.rs
crates/matchy-paraglob/tests/: integration_tests.rs
crates/matchy-wasm/: Cargo.toml  README.md
crates/matchy-wasm/demo/: README.md  index.html  serve.sh
crates/matchy-wasm/src/: lib.rs
crates/matchy/benches/: batch_bench.rs  bounds_check_test.rs  cache_bench.rs  mmdb_build_bench.rs  query_profile.rs  reload_overhead_bench.rs
crates/matchy/examples/: README.md  _incremental_builder.rs.bak  _production_test.rs.bak  _zero_alloc_demo.rs.bak  build_combined_database.rs  build_ip_database.rs  build_misp_database.rs  c_reload_callback.c  cache_demo.rs  concurrent_extraction.rs  custom_metadata.rs  hash_build_bench.rs  lookup_extracted_demo.rs  parallel_processing.rs  test_hash_speed.rs
crates/matchy/include/matchy/: matchy.h
crates/matchy/src/: ac_offset.rs  builder_ext.rs  database.rs  error.rs  extractor.rs  glob.rs  lib.rs  misp_importer.rs  mmdb_builder.rs  offset_format.rs  processing.rs  schema_validation.rs  serialization.rs  simd_utils.rs  validation.rs  watching_database.rs
crates/matchy/src/c_api/: matchy.rs  mod.rs
crates/matchy/src/mmdb/: format.rs  types.rs
crates/matchy/src/processing/: mod.rs  parallel.rs
crates/matchy/src/schemas/: mod.rs
crates/matchy/tests/: auto_reload_test.rs  cache_stale_notfound_test.rs  cli_tests.rs  debug_ip_tree.rs  integration_tests.rs  schema_validation_test.rs  sequential_builder_test.rs  test_c_api  test_c_api.c  test_c_api_extensions  test_c_api_extensions.c  test_ip_exact_match.rs  test_ip_longest_prefix_match.rs  test_mmdb_compat  test_mmdb_compat.c  thread_safety_tests.rs
examples/: build_combined_database.rs  build_ip_database.rs  c_auto_reload_example.c  cache_demo.rs  custom_metadata.rs  lookup_extracted_demo.rs  parallel_processing.rs  profile_ac.rs  test_hash_speed.rs
fuzz/: README.md
include/matchy/: matchy.h
schemas/: threatdb-v1.schema.json
scripts/: BENCHMARKING.md  README.md
src/: ac_literal_hash.rs  ac_offset.rs  database.rs  extractor.rs  glob.rs  lib.rs  literal_hash.rs  misp_importer.rs  mmap.rs  offset_format.rs  paraglob_offset.rs  processing.rs  serialization.rs  validation.rs
tests/: auto_reload_test.rs  cli_tests.rs  test_ip_exact_match.rs  test_ip_longest_prefix_match.rs  thread_safety_tests.rs
tools/update-psl/: Cargo.toml  README.md
tools/update-psl/src/: main.rs
