[workspace]
members = [
    "crates/matchy",
    "crates/matchy-match-mode",
    "crates/matchy-ac",
    "crates/matchy-paraglob",
    "crates/matchy-ip-trie",
    "crates/matchy-data-format",
    "crates/matchy-literal-hash",
    "crates/matchy-format",
    "crates/matchy-extractor",
]
resolver = "2"

[workspace.package]
version = "1.2.2"
authors = ["Seth Hall <seth@remor.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/matchylabs/matchy"

[workspace.dependencies]
# Shared dependencies
anyhow = "1.0"
memchr = "2.7"
zerocopy = { version = "0.8.27", features = ["derive"] }
memmap2 = "0.9.9"
rustc-hash = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
lru = "0.16"
rayon = "1.10"
flate2 = { version = "1.1", features = ["rust_backend"], default-features = false }
bs58 = "0.5"
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
bech32 = "0.11"
notify = "8.2"
arc-swap = "1.7"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Keep symbols for debugging initially
debug = true   # Enable debug info for profiling

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
