[package]
name = "matchy-ac"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # Internal crate for now

[dependencies]
matchy-match-mode = { path = "../matchy-match-mode" }
zerocopy.workspace = true
memchr.workspace = true
